[package]
name = "demos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.'*']
opt-level = 3

[dependencies]
macroquad = "0.3.10"
instant = "0.1"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }