[package]
name = "demos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.'*']
opt-level = 3

[dependencies]
#macroquad = "0.3.16"
#instant = "0.1"


# Because i'm lazy
hyper = { version = "0.14", features = ["full"] }
hyper-staticfile = "0.8.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1.4.0"