[package]
name = "demos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.'*']
opt-level = 3

[dependencies]
macroquad = "0.3.16"
instant = "0.1"
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen", "codegen"] }

